--- a/package.json
+++ b/package.json
@@ -1,28 +1,36 @@
 {
-  "name": "gameinn-admin-web",
+  "name": "react-webpack-scaffold",
   "version": "1.0.0",
-  "description": "Admin Web Panel",
+  "description": "React Webpack Scaffold",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest",
+    "test:watch": "npm test -- --watch"
   },
   "author": "Reconizer",
   "license": "ISC",
   "devDependencies": {
     "autoprefixer": "^6.7.7",
     "babel-core": "^6.24.1",
+    "babel-jest": "^20.0.3",
     "babel-loader": "^7.0.0",
+    "babel-polyfill": "6.23.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "bootstrap": "^4.0.0-alpha.6",
     "bootstrap-loader": "^2.0.0",
     "css-loader": "^0.28.0",
+    "enzyme": "^2.8.2",
+    "eslint": "^3.19.0",
     "exports-loader": "^0.6.4",
     "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.11.1",
+    "html-webpack-plugin": "2.29.0",
     "imports-loader": "^0.7.1",
+    "jest": "^20.0.3",
     "node-sass": "^4.5.2",
     "postcss-loader": "^1.3.3",
+    "react-addons-test-utils": "^15.5.1",
     "resolve-url-loader": "^2.0.2",
     "sass-loader": "^6.0.3",
     "style-loader": "^0.16.1",
@@ -31,9 +39,14 @@
     "webpack-dev-server": "^2.4.4"
   },
   "dependencies": {
-    "qwest": "^4.4.5",
+    "axios": "^0.16.1",
+    "classnames": "2.2.5",
+    "joi": "^10.4.1",
+    "joi-browser": "^10.0.6",
+    "prop-types": "^15.5.10",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
+    "react-google-maps": "^7.2.0",
     "react-redux": "^5.0.4",
     "react-router": "^4.1.1",
     "react-router-dom": "^4.1.1",
